--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+    <% if @breadcrumbs %>
+      <p> Last pages visited </p>
+      <% @breadcrumbs.each do |b| %>
+        <%= link_to  b, b %>
+      <% end %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
